--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
         "src": "./app.js",
-        "use": "@vercel/nose"
+        "use": "@vercel/node"
         }
     ],
     "routes": [
