--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "node": "^19.6.0"
+    "express": "^4.18.2"
   }
 }
