--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "dev": "nodemon index.js"
   },
   "author": "David V",
+  "type": "module", 
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
